--- a/right.html
+++ b/right.html
@@ -51,7 +51,7 @@
 		<p>You've reached the edge of your neighbour hood and you only have two ways you can run.</p>
 		
 		<p id="one"> <a href="woods.html">Run further into the woods.</a> </p>
-		<p id="two"> <a href="church.html">Run into the abandoned church.</a> </p>
+		<p id="two"> <a href="chruch.html">Run into the abandoned church.</a> </p>
 	</div>
 	
 	<audio src="tick.mp3" autoplay> </audio>
