--- a/deathscreen.html
+++ b/deathscreen.html
@@ -33,7 +33,7 @@
 	<div id="background">
 	
 	<h1> You were caught! </h1>
-		<p>Would you like to <a href="game.html">try again? </a></p>
+		<p>Would you like to <a href="index.html">try again? </a></p>
 		
 	</div>
 		
